Fixed spacing

--- a/style.css
+++ b/style.css
@@ -2676,6 +2676,9 @@ body, html {
   .buyNowButton {
     font-family: freightSansBold, sans-serif; }
 
+  .buyTicketsButton {
+    letter-spacing: 10px; }
+
   .buyTicketsDecor {
     height: 316px;
     margin: 50px 0px; } }
