--- a/styles/modules/buttons.scss
+++ b/styles/modules/buttons.scss
@@ -51,6 +51,10 @@
 		font-family: $font-fam-Bold;
 	}
 
+	.buyTicketsButton{
+		letter-spacing: 10px;
+	}
+
 	.buyTicketsDecor{
 		height: 316px;
 		margin: 50px 0px;
